--- a/WebScrapingNotebook.ipynb
+++ b/WebScrapingNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -256,7 +256,7 @@
    ],
    "source": [
     "# Para imprimir los resultados por pantalla\n",
-    "for i in range(0, len(titulos)):\n",
+    "for i in range(0, len(titulo)):\n",
     "    print(\"Producto \", i + 1)\n",
     "    print(\"TÍTULO: \",  titulo[i])\n",
     "    print(\"VALORACIÓN: \", valoracion[i])\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +289,13 @@
     "# Lo guardamos en un csv\n",
     "df.to_csv('search_results.csv', header = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
